--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -3,4 +3,5 @@ target 'iosApp' do
   platform :ios, '16.0'
   pod 'home', :path => '../home'
   pod 'checkout', :path => '../checkout'
+  pod 'data', :path => '../data'
 end
